--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "secure-ls": "^1.2.6",
     "vue": "^2.5.17",
     "vue-highlightjs": "1.3.3",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-select": "^3.11.2"
   },
   "devDependencies": {
     "@types/chai": "^4.1.0",
